[tool.poetry]
name = "maptileindex"
version = "0.1.0"
description = ""
authors = ["PEmugi <PEmugi@chizuwota.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
pytest = "^7.2.0"
pytest-cov = "^4.0.0"

[tool.poetry.dev-dependencies]

[tool.poetry.group.dev.dependencies]
mypy = "^0.991"
flake8 = "^6.0.0"
black = {version = "^23.1a1", allow-prereleases = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
addopts = "--cov --doctest-modules"
testpaths = [
	"maptileindex",
	"tests"
]

[tool.black]
line-length = 119